[package]
name = "ares"
version = "3.1.0"
authors = ["ivan770 <leshenko.ivan770@gmail.com>"]
edition = "2018"

[dependencies]
aes-soft = "0.3.3"
block-modes = "0.3.3"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
clap = { git = "https://github.com/clap-rs/clap/" }
dialoguer = "0.5.0"
sha3 = "0.8.2"
hmac = "0.7.1"
indicatif = "0.14.0"

[dev-dependencies]
hex-literal = "0.2.1"